--- a/exercise/templates/exercise/_submission_info.html
+++ b/exercise/templates/exercise/_submission_info.html
@@ -34,7 +34,7 @@
             <dt>
                 {% trans "Submitters" %}
             </dt>
-            <dd>{{ submission.submitters.all|students }}</dd>
+            <dd>{{ submission.submitters.all|profiles }}</dd>
         </dl>
     </div>
 </div>
