Improve error templates and messages

--- a/templates/403.html
+++ b/templates/403.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>404 Not found</title>
+        <title>403 Forbidden</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
@@ -12,15 +12,17 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="page-header">
-                        <h1>404 Not found</h1>
+                        <h1>403 Forbidden</h1>
                     </div>
                     {% include "_messages.html" %}
-                    <div class="alert alert-danger">
-                        {% blocktrans %}
-                        For an unknown reason you arrived somewhere that does not exist.
-                        Please try again.
-                        {% endblocktrans %}
-                    </div>
+                    <pre>
+   |        v
+   |   /\   |   ,.
+   ^\_("))_/| ´  .
+     /{%} \ |   `
+    /______\  ,'
+ ,'  ^   ^  ,'
+;          :</pre>
                 </div>
             </div>
         </div>
