--- a/templates/500.html
+++ b/templates/500.html
@@ -2,16 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>500 Internal server error</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-            <div class="page-header">
-                <h1>500 Internal server error</h1>
-            </div>
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8">
+                    <div class="page-header">
+                        <h1>500 Internal server error</h1>
+                    </div>
                     <div class="alert alert-danger">
                         Something went terribly wrong and we were not able to process your request. Sorry.
                     </div>
