--- a/templates/base.html
+++ b/templates/base.html
@@ -183,7 +183,7 @@
 				<div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">×</span>
+                            <span aria-hidden="true">&times;</span>
                         </button>
                         <h4 class="modal-title"></h4>
                     </div>
@@ -191,5 +191,21 @@
 				</div>
 			</div>
 		</div>
+        <div id="search-select-widget" class="hide">
+            <ul class="list-inline search-selected">
+                <li><button type="button"><span class="name">None</span> <span aria-label="{% trans 'Remove' %}">&times;</span></button></li>
+            </ul>
+            <div class="input-group">
+                <span class="input-group-btn dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-default" data-toggle="dropdown" type="button" aria-label="{% trans 'Search' %}">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                    </button>
+                    <ul class="dropdown-menu search-options">
+                        <li class="not-found"><a>{% trans "No matches" %}</a></li>
+                    </ul>
+                </span>
+                <input type="text" class="form-control" placeholder="{% trans 'Search for...' %}" />
+            </div>
+        </div>
     </body>
 </html>
