--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,3 +216,6 @@ html, body {
     border-bottom: 1px solid #e3e3e3;
     margin-bottom: 19px;
 }
+.form-inline .form-group div {
+    display: inline-block;
+}
