Major refactoring for learning object hierarchy

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -13,7 +13,7 @@
 <li role="presentation" class="menu-results">
 	<a href="{{ instance|url:'results' }}">
         <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
-        {% trans "My results" %}
+        {% trans "Exercise results" %}
     </a>
 </li>
 <li role="presentation" class="menu-notifications">
