--- a/edit_course/templates/edit_course/edit_model.html
+++ b/edit_course/templates/edit_course/edit_model.html
@@ -31,7 +31,7 @@
 
     {% if form.service_url %}
     <fieldset>
-        <legend>{% trans "Exercise service" %}</legend>
+        <legend>{% trans "Remote service" %}</legend>
 
         <div>
             {{ form.service_url|bootstrap_horizontal }}
