--- a/exercise/templates/exercise/results.html
+++ b/exercise/templates/exercise/results.html
@@ -9,7 +9,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% trans "My results" %}</li>
+<li class="active">{% trans "Exercise results" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
